[project]
name = "sensishieldproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "mitmproxy>=12.2.2",
    "pdf2image>=1.17.0",
    "presidio-analyzer>=2.2.362",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
